# parfile

./: .gitignore  LICENSE  README.md  config.ini  pyproject.toml
.github/workflow/: build.yml
.github/workflows/: python-publish.yml
parfile/: app.py  cfg.py  misc.py
parfile/gui/: tab_config.py  tab_main.py
tests/: fe.py  scrframe.py
